[project]
dynamic = ["version"]
name = "tank-project"
description = ""
requires-python = ">=3.12"
authors = [{ name = "Jana-TT", email = "janatt2056@gmail.com" }]
readme = "README.md"
dependencies = [
    "fastapi[standard]",
    "async-db-polars",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-asyncpg",
]


[tool.uv]
dev-dependencies = ["ipykernel", "ruff", "curlify2"]
